result_table/viap_list/avg10_true-unreach-call.c/output_avg10_true-unreach-call.c.log
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:73:15: error: ‘N_var’ undeclared here (not in a function)
 int avg(int x[N_var]);
               ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:74:15: error: ‘N_var’ undeclared here (not in a function)
 int avg(int x[N_var]){
               ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c: In function ‘avg’:
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:79:14: error: ‘N_var’ undeclared (first use in this function)
   while (i < N_var)
              ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:79:14: note: each undeclared identifier is reported only once for each function it appears in
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c: In function ‘main’:
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:89:9: error: ‘N_var’ undeclared (first use in this function)
   int x[N_var];
         ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:101:9: warning: implicit declaration of function ‘fun’ [-Wimplicit-function-declaration]
   ret = fun(x);
         ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:107:7: error: redefinition of ‘i’
   int i = 0;
       ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:94:7: note: previous definition of ‘i’ was here
   int i = 0;
       ^
Program Body
{
  int RET;
  RET = 0;
  int _1_FAILED;
  _1_FAILED = 0;
  int x[N_var];
  int temp;
  int ret;
  int ret2_var;
  int ret5_var;
  int i;
  i = 0;
  while (i < N_var)
  {
    x[i] = __VERIFIER_nondet_int();
    i = i + 1;
  }

  ret = fun(x);
  temp = x[0];
  x[0] = x[1];
  x[1] = temp;
  ret2_var = fun(x);
  temp = x[0];
  int i;
  i = 0;
  while (i < (N_var - 1))
  {
    x[i] = x[i + 1];
    i = i + 1;
  }

  x[N_var - 1] = temp;
  ret5_var = fun(x);
  if ((ret != ret2_var) || (ret != ret5_var))
  {
    _1_FAILED = 1;
  }

  RET = 1;
}

Function Name:
main
Return Type:
int
Input Variables:
{}
Local Variables:
{ temp:int ret5_var:int _1_FAILED:int ret:int i:int ret2_var:int RET:int x:array}
Program Body
{
  int RET;
  RET = 0;
  int i;
  long long ret;
  ret = 0;
  i = 0;
  while (i < N_var)
  {
    ret = ret + x[i];
    i = i + 1;
  }

  RET = ret / N_var;
}

Function Name:
avg
Return Type:
int
Input Variables:
{ x:array}
Local Variables:
{ i:int ret:long RET:int}

Output in normal notation:
1. Frame axioms:
x1 = x

2. Output equations:
temp1 = ite(((x=x) and (0=1)),d1array2(x,0,_N1),ite(((x=x) and (0=0)),d1array2(x,1,_N1),d1array2(x,0,_N1)))
ret5_var1 = fun_2(x)
_1_FAILED1 = ite(((fun(x)!=fun_1(x)) or (fun(x)!=fun_2(x))),1,0)
d1array1(_x1,_x2) = ite(((_x1=x) and (_x2=(N_var-1))),ite(((x=x) and (0=1)),d1array2(x,0,_N1),ite(((x=x) and (0=0)),d1array2(x,1,_N1),d1array2(x,0,_N1))),d1array4(_x1,_x2,_N2))
ret1 = fun(x)
i1 = (_N2+0)
ret2_var1 = fun_1(x)
main = 1

3. Other axioms:
d1array2(_x1,_x2,(_n1+1)) = ite(((_x1=x) and (_x2=(_n1+0))),__VERIFIER_nondet_int2(_n1),d1array2(_x1,_x2,_n1))
d1array2(_x1,_x2,0) = d1array(_x1,_x2)
(_N1>=(N_var-0))
(_n1<_N1) -> ((_n1+0)<N_var)
d1array4(_x1,_x2,(_n2+1)) = ite(((_x1=x) and (_x2=(_n2+0))),d1array4(x,((_n2+0)+1),_n2),d1array4(_x1,_x2,_n2))
d1array4(_x1,_x2,0) = ite(((_x1=x) and (_x2=1)),d1array2(x,0,_N1),ite(((_x1=x) and (_x2=0)),d1array2(x,1,_N1),d1array2(_x1,_x2,_N1)))
(_N2>=((N_var-0)-1))
(_n2<_N2) -> ((_n2+0)<(N_var-1))

4. Assumption :

5. Assertion :
(_1_FAILED1==0)

Output in normal notation:
1. Frame axioms:
x1(x) = x
d1array1(_x1,_x2) = d1array(_x1,_x2)

2. Output equations:
i1 = (_N3+0)
avg(x) = (ret22(_N3,x)/N_var)
ret1(x) = ret22(_N3,x)

3. Other axioms:
ret22((_n3+1),x) = (ret22(_n3,x)+d1array(x,(_n3+0)))
ret22(0,x) = 0
(_N3>=(N_var-0))
(_n3<_N3) -> ((_n3+0)<N_var)

4. Assumption :

5. Assertion :

Unknown
